--- a/hassio-hostapd/hostapd.conf
+++ b/hassio-hostapd/hostapd.conf
@@ -10,6 +10,9 @@ ieee80211n=1
 # QoS support, also required for full speed on 802.11n/ac/ax
 wmm_enabled=0
 
+# Enable 40MHz channels with 20ns guard interval
+ht_capab=[HT40][SHORT-GI-20][DSSS_CCK-40]
+
 # Accept all MAC addresses
 macaddr_acl=0
 
@@ -18,9 +21,6 @@ auth_algs=1
 
 # limit the frequencies used to those allowed in the country
 # ieee80211d=1
-
-# the country code
-# country_code=NL
 
 # Require clients to know the network name
 ignore_broadcast_ssid=0
@@ -46,3 +46,4 @@ logger_stdout_level=2
 # If CONFIG_ACS build option is enabled, the channel can be selected
 # automatically at run time by setting channel=acs_survey or channel=0, both of
 # which will enable the ACS survey based algorithm.
+
