--- a/hassio-hostapd/hostapd.conf
+++ b/hassio-hostapd/hostapd.conf
@@ -32,6 +32,7 @@ wpa=2
 wpa_key_mgmt=WPA-PSK
 
 # Use AES, instead of TKIP
+wpa_pairwise=TKIP
 rsn_pairwise=CCMP
 
 # hostapd event logger configuration
